2001-07-27  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/gnc-schedxaction-xml-v2.c: remove include of removed
	file. 

	* src/engine/gnc-freqspec-xml-v2.c: remove include of removed
	file. 

	* src/engine/gnc-pricedb-xml-v1.c: remove include of
	sixtp-writers.h and remove func xml_add_gnc_pricedb (no longer
	used anywhere)
	(gnc_pricedb_parser_new): reorder functions.
	remove include of removed file.

	* src/engine/io-gncxml-v1.c: move v1 kvp parser code to this
	file. 

	* src/engine/sixtp-parsers.h: remove old v1 parser decls to
	io-gncxml-v1.c 

	* src/engine/gnc-schedxaction-xml-v2.c
	(gnc_schedXaction_dom_tree_create): remove usage of
	xml_add_gint32. 

2001-07-26  James LewisMoss  <jimdres@mindspring.com>

	* configure.in: comment out AC_ARG_PROGRAM called.  Presumeably
	called by one of the AM macros.

2001-07-26  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/SchedXaction.c (xaccSchedTransactionInit):
	change declaration to static, uncommented g_free usage.  

	* src/engine/SchedXaction.c: Moved a couple of functions
	about.

	* src/engine/FreqSpec.c (xaccFreqSpecInit): change
	declaration to static.  Moved a couple of functions
	about.

	* src/engine/FreqSpec.h, SchedXaction.h: remove "Init"
	function prototypes

2001-07-25  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/SchedXaction.c 
	(sxprivtransactionListMapDelete): renamed function.

2001-07-24  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-sxeditor.sgml: New file.

	* doc/sgml/C/Makefile.am, gnucash.sgml: updates for new file

	* src/gnome/glade/sched-xact.glade: add help button

	* src/gnome/dialog-schedxaction.c: add callback for help button.

	* src/gnome/gnc-ui.h: pointer to help file.

2001-07-22  Dave Peticolas  <dave@krondo.com>

	* src/test/gnc-test-stuff.[ch] (get_random_price): new func.

	* src/register/splitreg.[ch]: remove null cell

	* src/engine/Transaction.h: update docs

2001-07-21  Dave Peticolas  <dave@krondo.com>
