@@ -1,3 +1,15 @@
+2001-07-28  Robert Graham Merkel  <rgmerk@mira.net>
+
+	* src/engine/SchedXaction.{ch}: Store template account in the
+	SchedXaction structure, get rid of splitlist from structure.
+	
+	* src/engine/gnc-schedxaction-xml-v2.c: replaced tag literals
+	with #define'd constants.
+	(gnc_schedXaction_dom_tree_create, sx_templ_act_handler): added
+	code for saving/restoring template account ID.
+
+	* doc/sgml/C/xacc-sxeditor.sgml: new file.
+
 2001-07-27  James LewisMoss  <jimdres@mindspring.com>
 
 	* src/engine/gnc-schedxaction-xml-v2.c: remove include of removed
